--- a/index.html
+++ b/index.html
@@ -1,41 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiTube</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>TravelTip</title>
 </head>
+<body>
+    <h1>TravelTip Starter</h1>
+    <div id="map" style="width: 100%; height: 400px;"></div>
+    <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
+    <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
+    <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
+    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
 
-<body onload="onInit()">
-    <header>
-        <h1>WikiTube with Modules</h1>
-        <form onsubmit="onSearch(event)">
-            <input type="search" name="search" placeholder="Search Youtube..." value="The Beatles">
-            <button>🔍</button>
-        </form>
-    </header>
-    <main class="main-content">
-        <section class="search-results">
-        </section>
-        <section class="video-play">
-            <iframe src="https://www.youtube.com/embed/A_MjCqQoLLA?controls=0"></iframe>
-        </section>
-    </main>
-    <section class="wiki-results-container">
-        <h2>Wikis</h2>
-        <section class="wiki-results">
-        </section>
-    </section>
+    <p>You are at: <span class="user-pos"></span></p>
+    <p>Locations: 
+        <pre class="locs"></pre>
+    </p>
+    
 
-    <!-- Libs for now - remain global! -->
-    <script src="lib/axios.js"></script>
-
-    <!-- <script src="js/services/storage.service.js"></script> -->
-    <!-- <script src="js/services/wiki-tube.service.js"></script> -->
-    <script type="module" src="js/wiki-tube.controller.js"></script>
-
+    <script type="module" src="js/app.controller.js"></script>
 </body>
-
 </html>
