--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body class="main-layout">
-    <h1>TravelTip Starter</h1>
+    <header class="full">
+        <h1>TravelTip </h1>
+    </header>
     <div id="map" style="width: 100%; height: 400px;"></div>
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
