--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main-layout">
-    <header class="full">
+    <header class="main-layout full">
         <h1>TravelTip </h1>
     </header>
     <div id="map" style="width: 100%; height: 400px;"></div>
