changes to search

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
-    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
+    <form onsubmit="onPanTo(event)">
+        <input class='text-pan' type="text" placeholder="where do you wanna go?">
+        <button class="btn-pan">go</button>
+    </form>
 <form onsubmit = "onLocationAdd(event)">`
 </form>
     <p>You are at: <span class="user-pos"></span></p>
@@ -23,7 +26,7 @@
         <pre class="locs"></pre>
     </p>
     
-
+    <script src="lib/axios.js"></script>
     <script type="module" src="js/app.controller.js"></script>
 </body>
 </html>
