--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
     <header class="main-layout full">
         <h1>TravelTip </h1>
     </header>
-    <div id="map" style="width: 100%; height: 400px;"></div>
-    <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
-    <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
-    <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
-    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
+    <main class="inside-layout">
+        <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
+        <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
+        <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
+        <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
+      
 
-    <p>You are at: <span class="user-pos"></span></p>
-    <p>Locations: 
-        <pre class="locs"></pre>
-    </p>
-    
+        <section class="loc-list">
+            <p>You are at: <span class="user-pos"></span></p>
+            <p>Locations: 
+                <pre class="locs"></pre>
+            </p>
+        </section>
+        <div id="map" style="width: 100%; height: 400px;"></div>
+    </main>
+
+    <footer class="full"><small>Lior Doron & Tamar Shalem</small></footer>
 
     <script type="module" src="js/app.controller.js"></script>
 </body>
